<resources>
    <string name="app_name">TerraSync</string>
    <string name="title_activity_map">2D Map</string>
    <string name="compass_icon">Compass Icon</string>
    <string name="geolocation_icon">Geolocation Icon</string>
    <string name="ar_icon">AR Icon</string>
    <string name="basemap_icon">Basemap Icon</string>
    <string name="measure_icon">Ruler Icon</string>
    <string name="layer_icon">Layer Icon</string>

    <!-- Autocomplete results -->
    <string name="searchText">Cari lokasi di sini...</string>

    <!-- Bottom Sheet Layer -->
    <string name="bottom_sheet_title">Pilih Layer</string>
    <string name="transparency_low">Transparansi Rendah</string>
    <string name="transparency_high">Transparansi Tinggi</string>

    <!-- Layer Icon -->
    <string name="layer1_name">Batas Administrasi</string>
    <string name="layer2_name">Bidang Tanah</string>
    <string name="layer3_name">Pola Ruang</string>
    <string name="layer1_icon">Icon for Layer 1</string>
    <string name="layer2_icon">Icon for Layer 2</string>
    <string name="layer3_icon">Icon for Layer 3</string>
    <string name="basemap_title">Pilih Peta Dasar</string>
    <string name="basemap1_icon">Icon for basemap 1</string>
    <string name="basemap2_icon">Icon for basemap 2</string>
    <string name="basemap1_name">Standar</string>
    <string name="basemap2_name">Monokrom</string>
    <string name="basemap3_name">Satelit</string>
    <string name="basemap3_icon">Icon for basemap 3</string>

    <!-- Pengukuran -->
    <string name="ruler_title">Pengukuran</string>
    <string name="ruler_button_desc">Buka Ruler</string>
    <string name="distance_label">Jarak:</string>
    <string name="area_label">Luas:</string>
    <string name="distance_value">%1$.2f meter</string>
    <string name="area_value">%1$.2f m²</string>
    <string name="ruler_panel_title">Pengukuran</string>
    <string name="loading">Loading ...</string>

</resources>