<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="false"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <!-- Mapbox MapView -->
    <com.mapbox.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mapbox_cameraTargetLat="-7.782930889964193"
        app:mapbox_cameraTargetLng="110.37494788915689"
        app:mapbox_cameraZoom="15.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Search input -->
    <EditText
        android:id="@+id/query_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/search_bar_height"
        android:layout_margin="@dimen/search_bar_margin"
        android:hint="@string/searchText"
        android:background="@drawable/bg_searchbar"
        android:padding="@dimen/padding_medium"
        android:paddingStart="@dimen/padding_large"
        android:drawableEnd="@drawable/ic_search"
        android:drawablePadding="@dimen/padding_small"
        android:textColor="@color/black"
        android:imeOptions="actionSearch"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Vertical Button Layout -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_medium">

        <!-- AR Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonAR"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="@dimen/button_size_small"
            android:background="@drawable/bg_btn_ar_button"
            android:src="@drawable/ic_ar"
            android:tint="@drawable/ic_ar_selector"
            android:padding="@dimen/button_icon_padding"
            android:contentDescription="@string/ar_icon"
            android:layout_marginBottom="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true" />

        <!-- Basemap Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonBasemap"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="@dimen/button_size_small"
            android:background="@drawable/bg_circle_button"
            android:src="@drawable/ic_basemap"
            android:tint="@drawable/ic_color_selector"
            android:padding="@dimen/button_icon_padding"
            android:contentDescription="@string/basemap_icon"
            android:layout_marginBottom="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true" />

        <!-- Ruler Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonRuler"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="@dimen/button_size_small"
            android:background="@drawable/bg_circle_button"
            android:src="@drawable/ic_measure"
            android:tint="@drawable/ic_color_selector"
            android:padding="@dimen/button_icon_padding"
            android:contentDescription="@string/measure_icon"
            android:layout_marginBottom="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true" />

        <!-- Layer Button -->
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/buttonLayer"
            android:layout_width="@dimen/button_size_small"
            android:layout_height="@dimen/button_size_small"
            android:background="@drawable/bg_circle_button"
            android:src="@drawable/ic_layer"
            android:tint="@drawable/ic_color_selector"
            android:padding="@dimen/button_icon_padding"
            android:contentDescription="@string/layer_icon"
            android:layout_marginBottom="@dimen/margin_medium"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <!-- Autocomplete results -->
    <com.mapbox.search.ui.view.SearchResultsView
        android:id="@+id/search_results_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:visibility="invisible"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/padding_large"
        android:paddingTop="@dimen/padding_small"
        android:layout_marginTop="@dimen/margin_small"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/query_text"
        app:layout_constraintStart_toStartOf="@id/query_text"
        app:layout_constraintEnd_toEndOf="@id/query_text" />

    <!-- Suggestions RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/suggestionsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        android:clipToPadding="false"
        android:background="@drawable/rounded_background"
        android:layout_marginTop="@dimen/margin_small"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/query_text"
        app:layout_constraintStart_toStartOf="@id/query_text"
        app:layout_constraintEnd_toEndOf="@id/query_text" />

    <!-- Custom Compass ImageView -->
    <ImageView
        android:id="@+id/customCompass"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:src="@drawable/ic_compass"
        android:contentDescription="@string/compass_icon"
        android:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGeolocation"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small" />

    <!-- Geolocation Button -->
    <ImageButton
        android:id="@+id/buttonGeolocation"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:background="@drawable/bg_nav_rounded"
        android:elevation="2dp"
        android:src="@drawable/ic_geolocation_state"
        android:contentDescription="@string/geolocation_icon"
        android:scaleType="fitCenter"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_extra_large" />

    <!-- Panel Ruler -->
    <LinearLayout
        android:id="@+id/panel_ruler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_panel"
        android:padding="@dimen/padding_medium"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/customCompass"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintBottom_toBottomOf="@id/buttonGeolocation"
        android:layout_marginStart="@dimen/margin_large">

        <!-- Title -->
        <TextView
            android:id="@+id/ruler_panel_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruler_panel_title"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"/>

        <!-- Attributes Container -->
        <LinearLayout
            android:id="@+id/ruler_attributes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margin_small"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
