<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium">

    <!-- Title -->
    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basemap_title"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_size_large"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:textStyle="bold" />

    <!-- Scrollable Button Container -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <!-- Basemap 1 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:layout_margin="@dimen/margin_small">

                <!-- Outline and Icon -->
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- Outline untuk Basemap yang Aktif -->
                    <View
                        android:id="@+id/active_outline_basemap1"
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:background="@drawable/outline_primary"
                        android:visibility="gone"
                        android:elevation="4dp"/>

                    <!-- Icon -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/icon_basemap1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/basemap_standard"
                            android:contentDescription="@string/basemap1_icon"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>
                </FrameLayout>

                <!-- Text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basemap1_name"
                    android:textSize="@dimen/text_size_small"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_extra_small" />
            </LinearLayout>

            <!-- Basemap 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:layout_margin="@dimen/margin_small">

                <!-- Outline and Icon -->
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- Outline untuk Basemap yang Aktif -->
                    <View
                        android:id="@+id/active_outline_basemap2"
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:background="@drawable/outline_primary"
                        android:visibility="gone"
                        android:elevation="4dp"/>

                    <!-- Icon -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/icon_basemap2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/basemap_monochrome"
                            android:contentDescription="@string/basemap2_icon"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>
                </FrameLayout>

                <!-- Text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basemap2_name"
                    android:textSize="@dimen/text_size_small"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_extra_small" />
            </LinearLayout>

            <!-- Basemap 3 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/padding_small"
                android:layout_margin="@dimen/margin_small">

                <!-- Outline and Icon -->
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <!-- Outline untuk Basemap yang Aktif -->
                    <View
                        android:id="@+id/active_outline_basemap3"
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        android:background="@drawable/outline_primary"
                        android:visibility="gone"
                        android:elevation="4dp"/>

                    <!-- Icon -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/button_size"
                        android:layout_height="@dimen/button_size"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="0dp"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/icon_basemap3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/basemap_satellite"
                            android:contentDescription="@string/basemap3_icon"
                            android:scaleType="centerCrop" />
                    </androidx.cardview.widget.CardView>

                </FrameLayout>

                <!-- Text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/basemap3_name"
                    android:textSize="@dimen/text_size_small"
                    android:gravity="center"
                    android:paddingTop="@dimen/padding_extra_small" />
            </LinearLayout>

            <!-- Tambahan Spacer View (Opsional) -->
            <View
                android:layout_width="@dimen/spacer_width"
                android:layout_height="match_parent" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>